tests/fixtures/valid/builtins/str_builtin.py
# str builtin
print(str(42))
print(str(-42))
print(str(3.14))
print(str(True))
print(str(False))
print(str([1, 2, 3]))
print(str({1, 2, 3}))
