tests/fixtures/invalid/pow_set_none_bool.py
# Cannot call pow() with Set[int], None, Bool
x = pow({1, 2, 3}, None, True)
